Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp
@@ -507,6 +507,7 @@ void MediaPlayerPrivateGStreamerMSE::setEosWithNoBuffers(bool eosWithNoBuffers)
         // error in lower versions.
         if (!webkitGstCheckVersion(1, 24, 0))
             m_ignoreErrors = true;
+        GST_DEBUG_OBJECT(pipeline(), "EOS with no buffers, setting pipeline to READY state.");
         changePipelineState(GST_STATE_READY);
         if (!webkitGstCheckVersion(1, 24, 0))
             m_ignoreErrors = false;
